--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
 }
 .second_child{
   background-color: #F5F7FA;
-  height: 4950px;
+  height: 4400px;
 }
 
 
@@ -256,6 +256,8 @@ body{
 }
 .email_address1{
   margin-left: 700px;
+  /* margin-top: 500px; */
+  margin-top: 50px;
 
 }
 .input_email1{
@@ -270,6 +272,21 @@ body{
 }
 .all_items_bottom{
   /* margin-top: 100px; */
+}
+.bottom1{
+  background-color: #0C1138;
+  width: 100%;
+  height: 300px;
+}
+/* .bottom_content{
+  background-color: red;
+  margin-top: 1000px;
+  width: 50%;
+} */
+
+.lower_input1{
+  font-size: 11px;
+  margin-left: 30px;
 }
 
 
@@ -293,6 +310,9 @@ body{
   }
   .all_epiosode{
     display: none;
+  }
+  .below_three{
+    flex-direction: column;
   }
   
 }
