--- a/good_ux_2/style.css
+++ b/good_ux_2/style.css
@@ -22,7 +22,7 @@
   margin-top: 15px;
 }
 .right_div {
-  /* width: 50%; */
+  width: 50%;
   display: flex;
   /* width: 100%; */
   /* width: 50%; */
@@ -31,7 +31,7 @@
   /* gap: px; */
   display: flex;
   height: 50px;
-  gap: 10px;
+  /* gap: 10px; */
   /* margin-top: 10px; */
   flex-wrap: nowrap;
   /* width: 100%; */
@@ -60,8 +60,8 @@
 }
 
 .flex-container > div {
-  background-color: DodgerBlue;
-  color: white;
+  /* background-color: Dodger Blue;
+  color: white; */
   width: 100px;
   /* gap: 20px; */
   /* margin: 10px; */
@@ -83,7 +83,7 @@
 }
 .input_area {
   width: 150px;
-  margin-left: 4px;
+  /* margin-left: 4px; */
   padding: 9px;
   border-radius: 7px;
   border-color: #5767844d;
@@ -100,98 +100,35 @@
 }
 .button_for_subscribe {
   padding: 9px;
-  margin-left: 40px;
+  /* margin-left: 40px; */
   background-color: #7d00fe;
   border-radius: 7px;
   border-color: #5767844d;
 }
 .icon {
   width: 40px;
+  float: right;
   margin-top: -30px;
   display: none;
-  margin-right: 50px;
+  /* margin-right: 50px; */
 }
 .ak {
   margin-top: 10px;
 }
-.first_child {
+.icon{
+  text-align: right;
+  float: right;
+}
+.icon_section{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  /* margin: 400px; */
-  /* width: 100%; */
-  /* height: 80vh; */
-  /* border: 1px solid black; */
+  justify-content: flex-end;
+  float: right;
 }
-.second_container {
-  /* margin-top: 100px; */
-  height: 800vh;
-  background-color: #f5f7fa;
-}
-.first_child {
-  /* margin-top: 10px; */
-  /* border: 2px solid red; */
-  display: flex;
-  height: 80vh;
-  justify-content: center;
-  align-items: center;
-  /* margin-top: 100px; */
-  background-color: #f5f7fa;
-}
-.content_area {
-  /* margin-top: 20px; */
-  height: 500px;
-  width: 86%;
-  /* border: 2px solid red; */
-  margin: 4px;
-  background-color: #9b00ff;
-  border-radius: 10px;
-}
-.input_email {
-  padding: 14px;
-  background-color: #8C00FE;
-  /* border: none; */
-  border-radius: 10px;
-  border: 1px solid #5767844d;
-  background-color: #4747cd;
-}
-.stay_inspired {
-  padding: 14px;
 
-  margin-left: -12px;
-  border: 2px solid #5767844d;
-  /* border: 1px solid black; */
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-}
-.lower_input{
-  margin-top: 80px;
-  color: white;
-}
-/* .center {
-  margin: auto;
-  width: 60%;
-  border: 3px solid #73AD21;
-  padding: 10px;
-} */
 
-.third_child_1{
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
-  height: fit-content;
-  margin-top: 1px;
+
+
   
-  /* border: 1px solid black; */
-
-}
-.paira{
-  /* border: 1px solid red; */
-  width: 60%;
-  height: fit-content;
-  margin-top: 1px;
-}
 
 @media (max-width: 800px) {
   .icon {
@@ -212,4 +149,5 @@
   .button_for_subscribe {
     display: none;
   }
+  
 }
