--- a/AirBnb/style.css
+++ b/AirBnb/style.css
@@ -94,6 +94,7 @@ body {
   align-items: center;
   width: 50%;
   gap: 15px;
+  margin-top: 10PX;
   /* z-index: 10; */
 }
 
@@ -158,6 +159,7 @@ body {
 .airbnb-button {
   padding: 10px;
   font-weight: bold;
+  margin-top: 10PX;
   /* font-size: 1rem; */
 
   border: none;
@@ -272,5 +274,44 @@ body {
 }
 .icone-section{
   width: 90%;
-  background-color: rebeccapurple;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  font-size: 40px;
+  gap: 67px;
+  text-decoration: none;
+/* background-color: rebeccapurple; */
+} 
+.right-side-settings{
+  display: flex;
+  border: 1px solid black;
+} 
+/* .icone-section:hover{
+  text-decoration: underline;
+} */
+.ak:hover{
+  text-decoration: underline;
+  /* margin-top: 10px; */
+
+}
+
+.flex-container {
+  display: flex;
+  /* flex-wrap: nowrap; */
+  /* background-color: DodgerBlue; */
+ 
+}
+
+.flex-container>div {
+  /* background-color: #f1f1f1; */
+  width: 80%;
+  /* gap: 1px;
+   */
+  /* margin: 10px; */
+  text-align: center;
+  /* line-height: 75px; */
+  font-size: 30px;
+}
+.ak{
+  width: 100px;
 }
