--- a/AirBnb/style.css
+++ b/AirBnb/style.css
@@ -395,28 +395,35 @@ input:checked + .slider:before {
   margin-top: -10px;
   border-radius: 10px;
 }
-.first-image{
-  
-}
-.image-section{
-  width: 95%;
-  
-}
 .third-container{
   display: flex;
-  justify-content: center;
-  justify-items: center;
-}
-.thord-container-image{
-  display: flex;
-  gap: 1px;
-  justify-content: center;
-  justify-items: center;
-  width: 86%;
-}
-.image-section-1{
-  height: 10px;
-  width: 95%;
+  margin-top: 30px;
+  /*   */
+  height: 550px;
   
 }
-
+.third-container-image{
+  width: 92%;
+  justify-content: center;
+  justify-items: center;
+  display: flex;
+  
+  /* background-color: red; */
+  height: 200px;
+  gap: 30px;
+  /* flex-wrap: wrap; */
+}
+.first-mage-section{
+  height: 10px;
+  width: 22%;
+  /* 
+   */
+  
+  /* flex-wrap: wrap; */
+}
+.first-image-1{
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  
+}
