--- a/cibil2.1/style.css
+++ b/cibil2.1/style.css
@@ -4,16 +4,17 @@ body {
   padding: 0;
 }
 .navbar {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   position: fixed;
   width: 100%;
   height: 150px;
   display: flex;
   top: 0;
   left: 0;
+  border-bottom: 5px solid yellow;
   /* background-color: white; */
   /* z-index: 1000; */
-  transition: 0.4s;
+  transition: 0.8s;
   position: sticky;
   /* margin-top: -30px; */
   /* background-color: red; */
@@ -29,7 +30,7 @@ body {
   margin-top: 30px;
   /* height: 100px; */
 }
-.div-logo{
+.div-logo {
   width: 20%;
 }
 .logo {
@@ -40,19 +41,18 @@ body {
   display: flex;
   gap: 20px;
   margin-right: 30px;
-  
 }
 .vl {
   border-left: 1px solid green;
   height: 24px;
   margin-top: 16px;
 }
-.span-section{
+.span-section {
   display: flex;
   gap: 50px;
   font-size: 20px;
 }
-.button-user-exit{
+.button-user-exit {
   border-radius: 30px;
   width: 150px;
   /* font-size: bold; */
@@ -61,28 +61,26 @@ body {
   border: none;
   /* width:50px; */
 }
-.button-user-exit:hover{
+.button-user-exit:hover {
   background-color: navy;
   color: white;
   cursor: pointer;
 }
-.text-decotation-span:hover{
+.text-decotation-span:hover {
   text-decoration: underline;
   text-decoration-thickness: 4px;
   text-underline-offset: 10px;
   /* font-weight: bold; */
 }
-.text-decotation-span-2{
+.text-decotation-span-2 {
   text-decoration: underline;
- text-decoration-color: aqua;
- /* margin-top: 10px; */
- text-underline-offset: 10px;
- text-decoration-thickness: 1px;
- cursor: pointer;
-
-
+  text-decoration-color: aqua;
+  /* margin-top: 10px; */
+  text-underline-offset: 10px;
+  text-decoration-thickness: 1px;
+  cursor: pointer;
 }
-.li-section{
+.li-section {
   display: flex;
   /*   */
   font-size: 20px;
@@ -90,105 +88,97 @@ body {
   text-decoration: none;
   /* gap: 50px; */
   margin-top: -5px;
-  
 }
-.li-section a{
+.li-section a {
   text-decoration: none;
   list-style: none;
   color: black;
-  
-  font-size: 20px;
-  font-weight: 400;
-  /* /* width: 200px; */
-  height: 20px; 
-  padding: 15px;
-  /* margin-top: -30px; */
-}
-.li-section a:hover{
-  background-color: yellow;
-}
-.search-icon{
-  font-size: 20px;
-  font-weight: 400;
-  /* /* width: 200px; */
-  height: 20px; 
-  padding: 15px;
-  /* margin-top: -30px; */
 
+  font-size: 20px;
+  font-weight: 400;
+  /* /* width: 200px; */
+  height: 20px;
+  padding: 15px;
+  /* margin-top: -30px; */
 }
-.search-icon:hover{
+.li-section a:hover {
   background-color: yellow;
 }
-.vl-1{
+.search-icon {
+  font-size: 20px;
+  font-weight: 400;
+  /* /* width: 200px; */
+  height: 20px;
+  padding: 15px;
+  /* margin-top: -30px; */
+}
+.search-icon:hover {
+  background-color: yellow;
+}
+.vl-1 {
   border-left: 1px solid green;
   height: 80px;
   margin-top: 30px;
   /* display: flex;
   justify-content: center;
   justify-items: center; */
-
 }
-.menu-icone{
+.menu-icone {
   display: none;
 }
 
 @media only screen and (max-width: 1200px) {
-  .menu-icone{
+  .menu-icone {
     display: block;
-
   }
   .button-user-exit {
     display: none;
   }
-  .vl{
+  .vl {
     display: none;
   }
-  .english{
+  .english {
     display: none;
   }
-  .li-section{
+  .li-section {
     display: none;
   }
-  .text-decotation-span{
+  .text-decotation-span {
     display: none;
   }
-  .text-decotation-span-2{
+  .text-decotation-span-2 {
     display: none;
   }
-  .navbar{
+  .navbar {
     height: 50px;
   }
-
-
- 
 }
-.hide-content{
+.hide-content {
   display: flex;
   justify-content: center;
   /* display: none; */
   /* background-color: black; */
-
 }
-.hide-1{
+.hide-1 {
   display: none;
 }
-.left-side{
+.left-side {
   background-color: red;
   width: 20%;
   /* float: right; */
 }
-.rigth-side{
+.rigth-side {
   background-color: blue;
   width: 20%;
 }
-.hr-1{
+.hr-1 {
   height: 2px solid yellow;
   border-top: 5px solid yellow;
 }
 
 /* this section for hower */
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: #04aa6d;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -205,7 +195,7 @@ body {
   position: absolute;
   background-color: #f1f1f1;
   min-width: 10px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -216,11 +206,17 @@ body {
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
 
 /* end the dropdown */
 
@@ -259,47 +255,46 @@ body {
   clear: both;
 } */
 
-.main-container{
+.main-container {
   display: flex;
   flex-wrap: wrap;
-  background-color: #F7F9FA;
+  /* background-color: #F7F9FA; */
 }
-.left-dive{
+.left-dive {
   width: 50%;
   /* float: right; */
 }
-.right-div{
+.right-div {
   width: 50%;
 }
-.left-section-content{
+.left-section-content {
   float: right;
   margin-top: 50px;
 }
-.img-contaner{
+.img-contaner {
   height: 400px;
   float: right;
   margin-right: 30px;
 }
- @media (max-width: 753px) {
-  .main-container{ /* Replace .container with the actual class name */
+@media (max-width: 753px) {
+  .main-container {
+    /* Replace .container with the actual class name */
     flex-direction: column; /* Change from row to column */
   }
-  .left-dive{
-    width: 100%;
-
-  }
-  .left-dive{
+  .left-dive {
     width: 100%;
   }
-  .left-section-content{
+  .left-dive {
+    width: 100%;
+  }
+  .left-section-content {
     float: left;
   }
-  .img-contaner{
+  .img-contaner {
     width: 100%;
   }
-
 }
-.button-1{
+.button-1 {
   padding: 10px;
   background-color: yellow;
   color: black;
@@ -309,6 +304,180 @@ body {
   border: none;
   margin-left: 10px;
 }
-.main-container-2{
+.main-container-2 {
   display: flex;
+  background-color: red;
+  height: 600px;
+  background-color: #f7f9fa;
+  gap: 130px;
+}
+.left-side-div {
+  width: 50%;
+  float: right;
+  height: 600px;
+  background-color: #e4edf1;
+  border-top-right-radius: 200px;
+  border-bottom-right-radius: 500px;
+}
+.right-side-div {
+  display: flex;
+  /* justify-content: center; 
+        align-items: center; */
+  height: 500px;
+  /* border: 1px solid black; */
+  width: 50%;
+  margin-top: 100px;
+}
+.container-ares {
+  /* justify-content: center; */
+  /* display: flex; */
+  /* justify-items: center; */
+  width: 100%;
+  line-height: 30px;
+}
+.incone-font {
+  display: flex;
+}
+.para-icone {
+  /* margin-top: 5px; */
+  font-size: 20px;
+}
+.icones {
+  background-color: #e4edf1;
+  font-size: 20px;
+  border-radius: 20px;
+  padding: 10px;
+  height: 40px;
+  margin-top: 10px;
+
+  /* padding: 10px;
+  border-radius: 30px;
+  height: 30px; */
+}
+.subscribe-button {
+  padding: 20px;
+  /* height: 30px; */
+  width: 300px;
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 30px;
+  background-color: yellow;
+  border: none;
+}
+.third-main-container {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  height: 200px;
+  line-height: 20px;
+  /* margin-top: 20px; */
+  /*   */
+}
+.fourth-container {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  height: 500px;
+  background-color: #ffffff;
+  gap: 30px;
+}
+.content-div {
+  width: 20%;
+  /* background-color: red; */
+  border: none;
+  box-shadow: 1px 1px 10px 10px #e4edf1;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  /*   */
+}
+/* .icone-section-1{
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  margin-top: 20px;
+}
+ .container-area-1{
+  width: 80%;
+  justify-content: center;
+  justify-items: center;
+  
+}  */
+
+.content-area1{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+
+}
+.content-area-2{
+  /* background-color: red; */
+  width: 80%;
+  height: 100%;
+
+}
+.first-para{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  font-size: 25px;
+}
+
+
+.secpnd-para{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  font-size: 20px;
+
+}
+.icone-1{
+  justify-content: center;
+  background-color: #E1F7FA;
+  display: flex;
+  justify-items: center;
+  width: 12%;
+  font-size: 30px;
+  padding: 12px;
+  border-radius: 100px;
+  margin-left: 100px;
+  margin-top: 20px;
+  
+}
+.button-section{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  margin-top: 100px;
+  
+}
+.five-container{
+  background-color: #F7F9FA;
+  display: flex;
+  height: 500px;
+}
+.five-left-div{
+  width: 50%;
+  margin-top: 50px;
+  
+}
+.five-right-div{
+  width: 50%;
+}
+.five-conternt-area{
+  float: right;
+}
+.five-button-section{
+  padding: 20px;
+  border: none;
+  background-color: yellow;
+  border-radius: 50px;
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: 30px;
+}
+.five-right-div{
+  float: right;
 }
